--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,1 +1,30 @@
-
+<section class="landingPageAbout">
+  <img class="portrait__path" src="../../assets/img/morphingGradient.svg" alt="">
+  <div class="portrait__text">
+    <div class="portrait__description">
+      For more than a year now, I am happy to work on different types of projects with multiple clients.
+    </div>
+    <div class="portrait__values">
+      I try as hard as possible to give you the best experience on both websites and mobiles.
+    </div>
+    <ul class="list__items">
+      <li>Sobriety</li>
+      <li>Elegance</li>
+      <li>Precision</li>
+    </ul>
+    <ul class="list__logos">
+      <li><a href="https://dribbble.com/mariemalherbe"><img src="../../assets/img/dribbble.png" alt=""></a></li>
+      <li><a href="https://www.linkedin.com/in/mariemalherbe/"><img src="../../assets/img/linkedIn.png" alt=""></a></li>
+      <li><a href="https://www.instagram.com/malherbe.marie/"><img src="../../assets/img/instagram.png" alt=""></a></li>
+    </ul>
+    <h1>Identity</h1>
+  </div>
+  <div class="portrait__details">
+    <img class="portrait__img" src="../../assets/img/myPicture.png" alt="">
+    <ul>
+      <li>Paris</li>
+      <li>malherbemarie0@gmail.com</li>
+      <li>07.78.07.40.60</li>
+    </ul>
+  </div>
+</section>
