--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -13,9 +13,9 @@
       <li>Precision</li>
     </ul>
     <ul class="list__logos">
-      <li><a href="https://dribbble.com/mariemalherbe"><img src="../../assets/img/dribbble.png" alt=""></a></li>
-      <li><a href="https://www.linkedin.com/in/mariemalherbe/"><img src="../../assets/img/linkedIn.png" alt=""></a></li>
-      <li><a href="https://www.instagram.com/malherbe.marie/"><img src="../../assets/img/instagram.png" alt=""></a></li>
+      <li><a href="https://dribbble.com/mariemalherbe"><i class="fi flaticon-dribbble"></i></a></li>
+      <li><a href="https://www.linkedin.com/in/mariemalherbe/"><i class="fi flaticon-linkedin"></i></a></li>
+      <li><a href="https://www.instagram.com/malherbe.marie/"><i class="fi flaticon-instagram"></i></a></li>
     </ul>
     <h1>Identity</h1>
   </div>
