--- a/src/app/expertise/expertise.component.html
+++ b/src/app/expertise/expertise.component.html
@@ -1,22 +1,32 @@
-<section class="expertise">
+<section [ngsRevealSet]="{ reset:true}" [ngsInterval]="1000" [ngsSelector]="'.item'" class="expertise" id="expertiseAnimation">
   <h1>Expertise</h1>
-  <span>Ui design</span>
-  <ul>
-    <li>Webdesign</li>
-    <li>Mobile Apps</li>
-    <li>Motion Design</li>
-  </ul>
 
+  <div class="item">
+    <span>Ui design</span>
+    <ul>
+      <li>Webdesign</li>
+      <li>Mobile Apps</li>
+      <li>Motion Design</li>
+    </ul>
+  </div>
+
+
+<div class="item">
   <span>Art Direction</span>
   <ul>
     <li>Logos</li>
     <li>Brand Identity</li>
   </ul>
+</div>
 
+
+<div class="item">
   <span>Front-end Development</span>
   <ul>
     <li>HTML5/CSS4</li>
     <li>JavaScript</li>
     <li>Agular 2&4 / React / React Native / Redux</li>
   </ul>
+</div>
+
 </section>
