--- a/src/app/expertise/expertise.component.scss
+++ b/src/app/expertise/expertise.component.scss
@@ -16,50 +16,55 @@
     margin-top: inherit;
     opacity: 0.45;
     letter-spacing: -0.05em;
-    font-size: 15em;
+    font-size: 15vw;
     padding-right: 55px;
     padding-top: 165px;
     font-family: 'signpainter';
   }
 
   span{
-    font-size: 24pt;
+    font-size: 2vw;
     padding-bottom: 10px;
     padding-top: 80px;
     font-family: 'Avenir LT Std 95 Black';
   }
 
-  ul{
-    text-align: center;
-    width: 50vw;
-    li{
-      font-family: 'Avenir LT Std 35 Light';
-      margin: 35px 0px;
-      &:not(:last-child){
+  .item{
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+      ul{
+        text-align: center;
+        width: 50vw;
+        li{
+          font-family: 'Avenir LT Std 35 Light';
+          margin: 35px 0px;
+          &:not(:last-child){
+            &:after{
+              content: '';
+              width: 5px;
+              height: 5px;
+              background-color: $green;
+              border-radius: 5px;
+              display: block;
+              position: absolute;
+              left: 50%;
+              transform: translate(-50%,200%);
+              right: 50%;
+            }
+          }
+          &:last-child{
+            margin-bottom: 80px;
+          }
+        }
         &:after{
-          content: '';
-          width: 5px;
-          height: 5px;
-          background-color: $green;
-          border-radius: 5px;
-          display: block;
-          position: absolute;
-          left: 50%;
-          transform: translate(-50%,200%);
-          right: 50%;
+            content: '';
+            width: 100%;
+            height: 1px;
+            background-color: $grey;
+            display: block;
+            background-color: #c9c9c9;
         }
       }
-      &:last-child{
-        margin-bottom: 80px;
-      }
-    }
-    &:after{
-        content: '';
-        width: 100%;
-        height: 1px;
-        background-color: $grey;
-        display: block;
-        background-color: #c9c9c9;
-    }
   }
 }
