--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,9 +1,9 @@
 <footer>
   <a href="">Home.</a>
   <ul>
-    <li><a href="https://dribbble.com/mariemalherbe"><i class="fi flaticon-dribbble"></i></a></li>
-    <li><a href="https://www.linkedin.com/in/mariemalherbe/"><i class="fi flaticon-linkedin"></i></a></li>
-    <li><a href="https://www.instagram.com/malherbe.marie/"><i class="fi flaticon-instagram"></i></a></li>
+    <li><a target="blank" href="https://dribbble.com/mariemalherbe"><i class="fi flaticon-dribbble"></i></a></li>
+    <li><a target="blank" href="https://www.linkedin.com/in/mariemalherbe/"><i class="fi flaticon-linkedin"></i></a></li>
+    <li><a target="blank" href="https://www.instagram.com/malherbe.marie/"><i class="fi flaticon-instagram"></i></a></li>
   </ul>
   <span>Marie Malherbe - 2017</span>
 </footer>
