get project by url

--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -4,5 +4,6 @@
     <li><a [routerLink]="['/about']"[routerLinkActive]="['is-active']">About.</a></li>
   </ul>
 </nav>
+<spinner [backgroundColor]="'#ff0000'"></spinner>
 <router-outlet></router-outlet>
 <app-footer></app-footer>
