--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,6 +1,7 @@
 <nav>
   <ul>
     <li> <a [routerLink]="['/home']"[routerLinkActive]="['is-active']">Home.</a></li>
+    <li><img class="logo" src="../../assets/img/logoMarieGeo.svg" alt=""></li>
     <li><a [routerLink]="['/about']"[routerLinkActive]="['is-active']">About.</a></li>
   </ul>
 </nav>
