--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,7 +2,7 @@
 <section class="landingPage">
   <img class="img--darken" src="../../assets/img/backgroundHome.png" alt="">
   <div class="landingPage__background">
-    <h1><span>Made</span> <span>for</span> <span>you</span></h1>
+    <h1><span>{{text}}</span></h1>
     <h2>Modern interfaces & interactive websites </h2>
     <img class="svg" src="../../assets/img/morphingGradient.svg" alt="">
   </div>
