add border gradient

--- a/src/app/expertise/expertise.component.scss
+++ b/src/app/expertise/expertise.component.scss
@@ -7,8 +7,10 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  background-color: white;
   color: $grey;
-    font-family: 'Avenir LT Std 85 Heavy';
+  font-family: 'Avenir LT Std 85 Heavy';
+  
   h1{
     color: $green;
     opacity: 0.45;
