--- a/src/app/lastprojects/lastprojects.component.html
+++ b/src/app/lastprojects/lastprojects.component.html
@@ -1,3 +1,4 @@
+<section class="lastProjects">
 <h1 class="project__title">Last projects</h1>
   <section class="projects">
     <section class="project + {{project.class}}" *ngFor="let project of projects | async">
@@ -10,3 +11,4 @@
       <img id="project__img--Path" src={{project.path}} alt="">
     </section>
   </section>
+</section>
