--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -63,13 +63,14 @@ $font-Flaticon-instagram: "\f102";
 .landingPageAbout{
   font-family: 'Avenir LT Std 35 Light';
   position: relative;
-  width: 90vw;
-  height: 90vh;
+  width: 98vw;
+  height: 95vh;
   margin: 0 auto;
   display: flex;
   justify-content: center;
   align-items: center;
   animation: landingPageEnter 1s ease-in;
+  background: white;
 
   .portrait__path{
     position: absolute;
@@ -125,6 +126,7 @@ $font-Flaticon-instagram: "\f102";
       position: absolute;
       bottom: -25px;
       left: 15%;
+      z-index: 2;
     }
     h1{
       letter-spacing: -0.02em;
