--- a/src/app/expertise/expertise.component.html
+++ b/src/app/expertise/expertise.component.html
@@ -1,4 +1,4 @@
-<section [@animationTitle]="scrollimateOptionsTitle.myScrollimationTitle.currentState" [scrollimate]="scrollimateOptionsTitle.myScrollimationTitle" class="expertise" id="expertiseAnimation">
+<section class="expertise" id="expertiseAnimation">
   <h1>Expertise</h1>
 
   <div [@animationList]="scrollimateOptions.myScrollimation.currentState" [scrollimate]="scrollimateOptions.myScrollimation" class="item">
