--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,7 @@
 body{
   margin: 0px;
+  background: -webkit-linear-gradient(top left, #99faff 0%, #bc75ff 50%, #6effd3 100%);
+  background: -o-linear-gradient(top left, #99faff 0%, #bc75ff 50%, #6effd3 100%);
+  background: linear-gradient(to bottom right, #99faff 0%, #bc75ff 50%, #6effd3 100%);
+  padding: 0vw 1vw;
 }
