--- a/src/app/lastprojects/lastprojects.component.html
+++ b/src/app/lastprojects/lastprojects.component.html
@@ -7,7 +7,7 @@
       <ul class="project__list" >
         <li [style.color]=project.color *ngFor="let tag of project.tags.split(';')">{{tag}}</li>
       </ul>
-      <a [routerLink]="project.url">Discover</a>
+      <a [routerLink]="['/home/' + project.url]" (click)="reloadData()">Discover</a>
       <img id="project__img--Path" src={{project.path}} alt="">
     </section>
   </section>
