change images path

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,5 +1,5 @@
 <section class="landingPageAbout">
-  <img class="portrait__path" src="../../assets/img/morphingGradient.svg" alt="">
+  <img class="portrait__path" src="assets/img/morphingGradient.svg" alt="">
   <div class="portrait__text">
     <div class="portrait__description">
       For more than a year now, I am happy to work on different types of projects with multiple clients.
@@ -20,7 +20,7 @@
     <h1>Identity</h1>
   </div>
   <div class="portrait__details">
-    <img class="portrait__img" src="../../assets/img/myPicture.png" alt="">
+    <img class="portrait__img" src="assets/img/myPicture.png" alt="">
     <ul>
       <li>Paris</li>
       <li>malherbemarie0@gmail.com</li>
