--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,7 +3,7 @@
   <div class="landingPage__background">
     <h1><span>{{text}}</span></h1>
     <h2>Modern interfaces & interactive websites </h2>
-    <img class="svg" src="../../assets/img/morphingGradient.svg" alt="">
+    <img class="svg" src="assets/img/morphingGradient.svg" alt="">
   </div>
 </section>
 <app-project></app-project>
