--- a/src/app/project/project.component.scss
+++ b/src/app/project/project.component.scss
@@ -5,6 +5,7 @@
 
 .projects__container{
   background: white;
+  padding-bottom: 150px;
   .left{
     display: flex;
     justify-content: flex-end;
