--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,8 +1,8 @@
 <nav>
   <ul>
-    <li> <a [routerLink]="['/home']"[routerLinkActive]="['is-active']">Home.</a></li>
-    <li><img class="logo" src="assets/img/logoMarieGeo.svg" alt=""></li>
-    <li><a [routerLink]="['/about']"[routerLinkActive]="['is-active']">About.</a></li>
+    <li> <a class="link" [routerLink]="['/home']"[routerLinkActive]="['is-active']">Home.</a></li>
+    <li><a [routerLink]="['/home']"><img class="logo" src="assets/img/logoMarieGeo.svg" alt=""></a></li>
+    <li><a class="link" [routerLink]="['/about']"[routerLinkActive]="['is-active']">About.</a></li>
   </ul>
 </nav>
 <spinner [backgroundColor]="'#ff0000'"></spinner>
