--- a/src/app/menu/menu.component.scss
+++ b/src/app/menu/menu.component.scss
@@ -21,7 +21,7 @@ nav{
     li{
       font-family: 'Droid Sans Mono', monospace;
       list-style: none;
-      a{
+      .link{
         text-decoration: none;
         color: $grey;
         display: block;
