--- a/src/app/project-detail/project-detail.component.html
+++ b/src/app/project-detail/project-detail.component.html
@@ -3,40 +3,40 @@
 
     <div class="project__header">
       <div class="project__img--portrait" [style.background-image]="'url(assets/img/' + project.image + ')'"></div>
-      <h1>{{project.name}}</h1>
-      <img id="project__img--Path" src={{project.path}} alt="">
+      <h1 [ngsReveal]="{ reset: true, origin: 'right', distance: '200px', duration: 1500, opacity: 0, scale : 1, delay: 500}">{{project.name}}</h1>
+      <img [ngsReveal]="{ reset: true, origin: 'top', distance: '200px', duration: 1500, opacity: 0, scale : 1}" id="project__img--Path" src={{project.path}} alt="">
     </div>
 
     <div class="project__specs">
-      <ul class="project__list">
+      <ul [ngsReveal]="{ reset: true, origin: 'bottom', distance: '200px', duration: 1500, opacity: 0, scale: 1}" class="project__list">
         <li>Client</li>
         <li>{{project.client}}</li>
       </ul>
 
-      <ul class="project__list">
+      <ul [ngsReveal]="{ reset: true, origin: 'bottom', distance: '200px', duration: 1500, opacity: 0, delay: 500, scale : 1}" class="project__list">
         <li>Role</li>
         <li *ngFor="let role of project.roles.split(';')">{{role}}</li>
       </ul>
 
-      <ul class="project__list">
+      <ul [ngsReveal]="{ reset: true, origin: 'bottom', distance: '200px', duration: 1500, opacity: 0, delay: 1000, scale: 1}" class="project__list">
         <li>Work</li>
         <li>{{project.work}}</li>
       </ul>
 
-      <button [routerLink]="project.url">Discover</button>
+      <button [ngsReveal]="{ reset: true, origin: 'right', distance: '200px', duration: 1500, opacity: 0, scale: 1}" [routerLink]="project.url">Discover</button>
     </div>
 
     <div class="project__description">
       <div class="description__img" [style.background-image]="'url(assets/img/' + project.imgDesc + ')'"alt=""></div>
-      <p>{{project.description}}</p>
+      <p [ngsReveal]="{ reset: true, origin: 'right', distance: '200px', duration: 1500, opacity: 0, scale : 1}">{{project.description}}</p>
     </div>
 
     <div class="project__quote">
-      <p>{{project.quote}}</p>
+      <p [ngsReveal]="{ reset: true, origin: 'top', distance: '200px', duration: 1500, opacity: 0, scale : 1}">{{project.quote}}</p>
     </div>
 
     <section class="gallery__container">
-      <div class="gallery">
+      <div [ngsReveal]="{ reset: true, origin: 'top', distance: '200px', duration: 1500, opacity: 0, scale : 1}" class="gallery">
         <div *ngFor="let brick of project.gallery.split('; ')" class="gallery__item" [style.background]="'url(' + brick + ')'"></div>
       </div>
   </section>
