--- a/src/app/project-detail/project-detail.component.scss
+++ b/src/app/project-detail/project-detail.component.scss
@@ -102,10 +102,12 @@
     width: 92vw;
     margin: 50px auto;
     height: 50vh;
+    display: flex;
+    justify-content: center;
     .gallery{
       display: grid;
-      grid-gap: 10px;
-      grid-template-columns: repeat(3, 30vw);
+      grid-gap: 15vw;
+      grid-template-columns: repeat(3, 15vw);
       grid-auto-rows: 150px;
       grid-auto-flow: row dense;
       &__item{
@@ -114,6 +116,7 @@
         grid-column-start: auto;
         grid-row-start: auto;
         height: 450px;
+        background-size: cover;
       }
     }
   }
