update animations & portfoliPage details

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,5 +1,5 @@
 <section class="landingPageAbout">
-  <img [ngsReveal]="{ reset: true, origin: 'right', distance: '500px', duration: 1500, opacity: 0, scale : 1}" class="portrait__path" src="assets/img/morphingGradient.svg" alt="">
+  <img [ngsReveal]="{ reset: false, origin: 'right', distance: '500px', duration: 1500, opacity: 0, scale : 1}" class="portrait__path" src="assets/img/morphingGradient.svg" alt="">
   <div class="portrait__text">
     <div class="portrait__description">
       For more than a year now, I am happy to work on different types of projects with multiple clients.
@@ -13,14 +13,14 @@
       <li>Precision</li>
     </ul>
     <ul class="list__logos">
-      <li [ngsReveal]="{ reset: true, origin: 'bottom', distance: '200px', duration: 1500, opacity: 0, scale : 1, delay: 0}"><a href="https://dribbble.com/mariemalherbe"><i class="fi flaticon-dribbble"></i></a></li>
-      <li [ngsReveal]="{ reset: true, origin: 'bottom', distance: '200px', duration: 1500, opacity: 0, scale : 1, delay: 500}"><a href="https://www.linkedin.com/in/mariemalherbe/"><i class="fi flaticon-linkedin"></i></a></li>
-      <li [ngsReveal]="{ reset: true, origin: 'bottom', distance: '200px', duration: 1500, opacity: 0, scale : 1, delay: 1000}"><a href="https://www.instagram.com/malherbe.marie/"><i class="fi flaticon-instagram"></i></a></li>
+      <li [ngsReveal]="{ reset: false, origin: 'bottom', distance: '200px', duration: 1500, opacity: 0, scale : 1, delay: 0}"><a href="https://dribbble.com/mariemalherbe"><i class="fi flaticon-dribbble"></i></a></li>
+      <li [ngsReveal]="{ reset: false, origin: 'bottom', distance: '200px', duration: 1500, opacity: 0, scale : 1, delay: 500}"><a href="https://www.linkedin.com/in/mariemalherbe/"><i class="fi flaticon-linkedin"></i></a></li>
+      <li [ngsReveal]="{ reset: false, origin: 'bottom', distance: '200px', duration: 1500, opacity: 0, scale : 1, delay: 1000}"><a href="https://www.instagram.com/malherbe.marie/"><i class="fi flaticon-instagram"></i></a></li>
     </ul>
     <h1>Identity</h1>
   </div>
   <div class="portrait__details">
-    <img [ngsReveal]="{ reset: true, origin: 'bottom', distance: '500px', duration: 1500, scale : 1, delay : 500}" class="portrait__img" src="assets/img/myPicture.png" alt="">
+    <img [ngsReveal]="{ reset: false, origin: 'bottom', distance: '500px', duration: 1500, scale : 1, delay : 500}" class="portrait__img" src="assets/img/myPicture.png" alt="">
     <ul>
       <li>Paris</li>
       <li>malherbemarie0@gmail.com</li>
