--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -141,7 +141,7 @@ $font-Flaticon-instagram: "\f102";
   }
 
   .portrait__details{
-    width: 40%;
+    width: 25vw;
     position: relative;
     height: 100%;
     display: flex;
@@ -150,8 +150,7 @@ $font-Flaticon-instagram: "\f102";
     flex-direction: column;
     .portrait__img{
       position: absolute;
-      width: 125%;
-      left: -50px;
+      width: 100%;
       z-index: 3;
     }
     ul{
